# python-packages

./: .gitignore  README.md  test_schema_keys.py
artificial-mycelium/: pyproject.toml
artificial-mycelium/artificial_mycelium/: __init__.py  llm_schema_capable.py
artificial-mycelium/artificial_mycelium/llm_engine/: schema_utils.py
artificial-mycelium/artificial_mycelium/llm_engine/ai_providers/: ai.py  ai_provider_interface.py
artificial-mycelium/artificial_mycelium/llm_engine/ai_providers/providers/deepseek/: chat_completions_wrapper.py
artificial-mycelium/artificial_mycelium/llm_engine/ai_providers/providers/google/: gemini_wrapper.py  google_provider.py
artificial-mycelium/artificial_mycelium/llm_engine/ai_providers/providers/openai/: openai_provider.py
artificial-mycelium/artificial_mycelium/llm_engine/ai_providers/providers/openai/service_wrappers/: deep_research_wrapper.py  image_api_wrapper.py  responses_api_wrapper.py
artificial-mycelium/artificial_mycelium/llm_engine/ai_providers/providers/shared/: api_utilities.py  base_provider.py
artificial-mycelium/artificial_mycelium/llm_engine/data_models/llm_job/: llm_job.py  llm_job_handler.py  llm_job_step.py
artificial-mycelium/artificial_mycelium/llm_engine/data_models/thread/: thread.py
artificial-mycelium/artificial_mycelium/llm_engine/services/: ai_performance_metrics.py  prompt_handler.py
artificial-mycelium/configurations/: coding-guru-configuration.json
artificial-mycelium/source_code/artificial_mycelium/llm_engine/ai_providers/: ai.py  ai_provider_interface.py
artificial-mycelium/source_code/artificial_mycelium/llm_engine/ai_providers/providers/deepseek/: constants.py  deepseek_provider.py
artificial-mycelium/source_code/artificial_mycelium/llm_engine/ai_providers/providers/google/: constants.py  gemini_wrapper.py
artificial-mycelium/source_code/artificial_mycelium/llm_engine/ai_providers/providers/openai/: constants.py  openai_provider.py
artificial-mycelium/source_code/artificial_mycelium/llm_engine/ai_providers/providers/shared/: api_utilities.py  openai_compatible_provider.py
artificial-mycelium/source_code/artificial_mycelium/llm_engine/data_models/response_models/: llm_code_response.py
artificial-mycelium/source_code/artificial_mycelium/llm_engine/data_models/thread/supports/: text_message.py
artificial-mycelium/source_code/artificial_mycelium/llm_engine/services/: ai_performance_metrics.py  prompt_handler.py
coding-guru/: .gitignore  Makefile  pyproject.toml
coding-guru/coding_guru/terminal_functionality/commands/observe_and_improve_codebase/operations/for_file_processing/: comment_code.py  process_file.py
coding-guru/configurations/: coding-guru-configuration.json
database-dimension/: pyproject.toml
database-dimension/.cursor/rules/: universal-rule.mdc
database-dimension/configurations/: coding-guru-configuration.json
database-dimension/database_dimension/: __init__.py
database-dimension/database_dimension/mongodb/: base_model.py  client.py  gateway.py
database-dimension/database_dimension/terminal_functionality/: __init__.py
database-dimension/database_dimension/terminal_functionality/commands/clear_database/: command.py
database-dimension/source_code/database_dimension/mongodb/: base_model.py  handler.py
database-dimension/source_code/database_dimension/terminal_functionality/: __init__.py
database-dimension/source_code/database_dimension/terminal_functionality/commands/reset_database/: command.py
dev-pytopia/: pyproject.toml
dev-pytopia/configurations/: coding-guru-configuration.json
dev-pytopia/dev_pytopia/: __init__.py
dev-pytopia/dev_pytopia/frameworks/terminal_functionality_framework/: terminal_command_registry.py
dev-pytopia/dev_pytopia/services/file_system_change_processor/: file_system_change_processor.py
dev-pytopia/dev_pytopia/services/file_system_change_processor/supports/: file_system_change_processor_configuration.py
dev-pytopia/dev_pytopia/services/logger/: logger.py
dev-pytopia/dev_pytopia/services/logger/operations/: get_location_of_log_call.py
dev-pytopia/dev_pytopia/terminal_functionality/: __init__.py
dev-pytopia/dev_pytopia/terminal_functionality/commands/execute_and_restart_program/: command.py
dev-pytopia/dev_pytopia/terminal_functionality/commands/setup_project/: command.py
dev-pytopia/source_code/dev_pytopia/frameworks/operation_framework/: operation.py
dev-pytopia/source_code/dev_pytopia/frameworks/terminal_functionality_framework/: terminal_command_registry.py
dev-pytopia/source_code/dev_pytopia/services/logger/: terminal_formatter.py
dev-pytopia/source_code/dev_pytopia/terminal_functionality/: __init__.py
dev-pytopia/source_code/dev_pytopia/terminal_functionality/commands/execute_and_restart_program/: command.py
dev-pytopia/source_code/dev_pytopia/universal_utilities/error_related/: error_handling.py
dev-pytopia/source_code/dev_pytopia/universal_utilities/mixins/: singleton_mixin.py
fast-server/: Makefile  pyproject.toml
fast-server/configurations/: coding-guru-configuration.json
fast-server/fast_server/api_operation_framework/dependencies/: get_user_id.py  log_request_data.py
fast-server/fast_server/api_operation_framework/operations/: api_operation.py
fast-server/source_code/fast_server/: __init__.py
fast-server/source_code/fast_server/api_operation_framework/operations/: initialize_and_register_api_operations.py
fast-server/source_code/fast_server/server/: fast_api_server.py
novelty-engine/: pyproject.toml
novelty-engine/configurations/: coding-guru-configuration.json
novelty-engine/novelty_engine/api_operations/: get_ideas.py  save_idea.py
novelty-engine/novelty_engine/data/: idea.py
novelty-engine/source_code/novelty_engine/api_operations/: get_ideas.py  save_idea.py
novelty-engine/source_code/novelty_engine/data/: idea.py  idea_data_model_handler.py
novelty-engine/source_code/novelty_engine/terminal_functionality/: __init__.py
novelty-engine/source_code/novelty_engine/terminal_functionality/commands/get_ideas/: command.py
(+67 files in other folders)
