[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "database-dimension"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.9.2",
    "motor>=3.6.1",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "dev-pytopia @ git+https://github.com/YOUR_GITHUB_USERNAME/python-packages@main#subdirectory=dev-pytopia",
]

# For local development, uncomment to use local path instead of git:
[tool.uv.sources]
dev-pytopia = { path = "../dev-pytopia", editable = true }

[project.scripts]
database-dimension = "database_dimension.terminal_functionality:main"

[tool.hatch.build.targets.wheel]
packages = ["source_code/database_dimension"]

[tool.ruff]
line-length = 115
src = ["source_code"]

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501", "E731"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = true
relative-imports-order = "closest-to-furthest"
