[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[project]
name = "database-dimension"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.10.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
database-dimension = "database_dimension.terminal_functionality:main"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 115
src = ["database_dimension"]

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501", "E731"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = true
relative-imports-order = "closest-to-furthest"
