[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "<package-name>"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
]

[tool.hatch.build.targets.wheel]
packages = ["source_code/<package_name>"]

[tool.uv.sources]
"<local-dependency-name>" = { path = "../<Local Dependency Display Name>", editable = true }

[tool.ruff]
line-length = 115
src = ["source_code", "tests"]

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = true
relative-imports-order = "closest-to-furthest"


